// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Modal interface testing close(callback) 1`] = `
<div
  className="uu5-bricks-modal"
  id="uuID-modal"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-modal-dialog uu5-bricks-modal-m uu5-bricks-modal-layout-wrapper"
  >
    <modal-header
      _onClose={[Function]}
      content="Jest modal"
      id="uuID-modal-header"
      key="uuID-modal-header"
      underline={false}
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Modal interface testing close(callback) 2`] = `
<div
  className="uu5-bricks-modal uu5-common-hidden"
  id="uuID-modal"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-modal-dialog uu5-bricks-modal-m uu5-bricks-modal-layout-wrapper"
  >
    <modal-header
      _onClose={[Function]}
      content="Jest modal"
      id="uuID-modal-header"
      key="uuID-modal-header"
      underline={false}
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Modal interface testing isSticky() - modal is not sticky 1`] = `
<div
  className="uu5-bricks-modal"
  id="uuID-modal"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-modal-dialog uu5-bricks-modal-m uu5-bricks-modal-layout-wrapper"
  >
    <modal-header
      _onClose={[Function]}
      content="Jest modal"
      id="uuID-modal-header"
      key="uuID-modal-header"
      underline={false}
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Modal interface testing isSticky() - modal is sticky 1`] = `
<div
  className="uu5-bricks-modal"
  id="uuID-modal"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-modal-dialog uu5-bricks-modal-m uu5-bricks-modal-layout-wrapper"
  >
    <modal-header
      _onClose={[Function]}
      _sticky={true}
      content="Jest modal"
      id="uuID-modal-header"
      key="uuID-modal-header"
      underline={false}
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Modal interface testing open(content-props, callback) 1`] = `
<div
  className="uu5-bricks-modal uu5-common-hidden"
  id="uuID-modal"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-modal-dialog uu5-bricks-modal-m uu5-bricks-modal-layout-wrapper"
  >
    <modal-header
      _onClose={[Function]}
      content="Jest modal"
      id="uuID-modal-header"
      key="uuID-modal-header"
      underline={false}
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Modal interface testing open(content-props, callback) 2`] = `
<div
  className="uu5-bricks-modal"
  id="uuID-modal"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-modal-dialog uu5-bricks-modal-m uu5-bricks-modal-layout-wrapper"
  >
    <modal-header
      _onClose={[Function]}
      content="Jest modal"
      id="uuID-modal-header"
      key="uuID-modal-header"
      underline={false}
    />
    <modal-body
      content={
        <Div
          className={null}
          content={null}
          controlled={true}
          disabled={false}
          dynamic={false}
          hidden={false}
          id="uuID-div"
          ignoreInnerHTML={false}
          mainAttrs={null}
          name={null}
          nestingLevel={null}
          parent={null}
          pureRender={false}
          ref_={null}
          selected={false}
          style={null}
          tooltip={null}
        >
          Some content
        </Div>
      }
      id="uuID-modal-body"
      key="uuID-modal-body"
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Modal interface testing toggle() - should close window 1`] = `
<div
  className="uu5-bricks-modal"
  id="uuID-modal"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-modal-dialog uu5-bricks-modal-m uu5-bricks-modal-layout-wrapper"
  >
    <modal-header
      _onClose={[Function]}
      content="Jest modal"
      id="uuID-modal-header"
      key="uuID-modal-header"
      underline={false}
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Modal interface testing toggle() - should close window 2`] = `
<div
  className="uu5-bricks-modal uu5-common-hidden"
  id="uuID-modal"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-modal-dialog uu5-bricks-modal-m uu5-bricks-modal-layout-wrapper"
  >
    <modal-header
      _onClose={[Function]}
      content="Jest modal"
      id="uuID-modal-header"
      key="uuID-modal-header"
      underline={false}
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Modal interface testing toggle() - should open window 1`] = `
<div
  className="uu5-bricks-modal uu5-common-hidden"
  id="uuID-modal"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-modal-dialog uu5-bricks-modal-m uu5-bricks-modal-layout-wrapper"
  >
    <modal-header
      _onClose={[Function]}
      content="Jest modal"
      id="uuID-modal-header"
      key="uuID-modal-header"
      underline={false}
    />
  </div>
</div>
`;

exports[`UU5.Bricks.Modal interface testing toggle() - should open window 2`] = `
<div
  className="uu5-bricks-modal"
  id="uuID-modal"
  style={
    Object {
      "MozTransitionDuration": "0.15s",
      "OTransitionDuration": "0.15s",
      "WebkitTransitionDuration": "0.15s",
      "transitionDuration": "0.15s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-modal-dialog uu5-bricks-modal-m uu5-bricks-modal-layout-wrapper"
  >
    <modal-header
      _onClose={[Function]}
      content="Jest modal"
      id="uuID-modal-header"
      key="uuID-modal-header"
      underline={false}
    />
  </div>
</div>
`;
